chore: update scripts.

--- a/package.json
+++ b/package.json
@@ -466,6 +466,7 @@
 		}
 	],
 	"scripts": {
+		"build": "vsce package",
 		"vscode:prepublish": "npm run compile",
 		"compile": "tsc -p ./",
 		"watch": "tsc -watch -p ./"
